LDEV-3275: Upgrade Hibernate Core to version 4.3.5.